include/xraylib.h

/* Initialization */
XRL_EXTERN
void XRayInit(void);
/* Atomic weights */
XRL_EXTERN
double AtomicWeight(int Z, xrl_error **error);
/* Density of pure atomic element */
XRL_EXTERN
double ElementDensity(int Z, xrl_error **error);
/* Cross sections (cm2/g) */
XRL_EXTERN
double CS_Total(int Z, double E, xrl_error **error);
XRL_EXTERN
double CS_Photo(int Z, double E, xrl_error **error);
XRL_EXTERN
double CS_Rayl(int Z, double E, xrl_error **error);
XRL_EXTERN
double CS_Compt(int Z, double E, xrl_error **error);
XRL_EXTERN
double CS_KN(double E, xrl_error **error);
XRL_EXTERN
double CS_Energy(int Z, double E, xrl_error **error);
/* barn/atom */
XRL_EXTERN
double CSb_Total(int Z, double E, xrl_error **error);
XRL_EXTERN
double CSb_Photo(int Z, double E, xrl_error **error);
XRL_EXTERN
double CSb_Rayl(int Z, double E, xrl_error **error);
XRL_EXTERN
double CSb_Compt(int Z, double E, xrl_error **error);
/* Unpolarized differential scattering cross sections */
XRL_EXTERN
double DCS_Thoms(double theta, xrl_error **error);
XRL_EXTERN
double DCS_KN(double E, double theta, xrl_error **error);
XRL_EXTERN
double DCS_Rayl(int Z, double E, double theta, xrl_error **error);
XRL_EXTERN
double DCS_Compt(int Z, double E, double theta, xrl_error **error);
XRL_EXTERN
double DCSb_Rayl(int Z, double E, double theta, xrl_error **error);
XRL_EXTERN
double DCSb_Compt(int Z, double E, double theta, xrl_error **error);
/* Polarized differential scattering cross sections */
XRL_EXTERN
double DCSP_Thoms(double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSP_KN(double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSP_Rayl(int Z, double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSP_Compt(int Z, double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSPb_Rayl(int Z, double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSPb_Compt(int Z, double E, double theta, double phi, xrl_error **error);
/* Scattering factors */
XRL_EXTERN
double FF_Rayl(int Z, double q, xrl_error **error);
XRL_EXTERN
double SF_Compt(int Z, double q, xrl_error **error);
XRL_EXTERN
double MomentTransf(double E, double theta, xrl_error **error);
/* X-ray fluorescent line energy */
XRL_EXTERN
double LineEnergy(int Z, int line, xrl_error **error);
/* Fluorescence yield */
XRL_EXTERN
double FluorYield(int Z, int shell, xrl_error **error);
/* Coster-Kronig transition Probability */
XRL_EXTERN
double CosKronTransProb(int Z, int trans, xrl_error **error);
/* Absorption-edge energies */
XRL_EXTERN
double EdgeEnergy(int Z, int shell, xrl_error **error);
/* Jump ratio */
XRL_EXTERN
double JumpFactor(int Z, int shell, xrl_error **error);
/* Fluorescent-lines cross sections */
XRL_EXTERN
double CS_FluorLine(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine(int Z, int line, double E, xrl_error **error);
/* Fractional radiative rate */
XRL_EXTERN
double RadRate(int Z, int line, xrl_error **error);
/* Photon energy after Compton scattering */
XRL_EXTERN
double ComptonEnergy(double E0, double theta, xrl_error **error);
/* Anomalous Scattering Factors */
XRL_EXTERN
double Fi(int Z, double E, xrl_error **error);
XRL_EXTERN
double Fii(int Z, double E, xrl_error **error);
/* Kissel Photoelectric cross sections */
XRL_EXTERN
double CS_Photo_Total(int Z, double E, xrl_error **error);
XRL_EXTERN
double CSb_Photo_Total(int Z, double E, xrl_error **error);
XRL_EXTERN
double CS_Photo_Partial(int Z, int shell, double E, xrl_error **error);
XRL_EXTERN
double CSb_Photo_Partial(int Z, int shell, double E, xrl_error **error);
/* XRF cross sections using Kissel partial photoelectric cross sections */
XRL_EXTERN
double CS_FluorLine_Kissel(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine_Kissel(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CS_FluorLine_Kissel_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine_Kissel_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CS_FluorLine_Kissel_Nonradiative_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine_Kissel_Nonradiative_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CS_FluorLine_Kissel_Radiative_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine_Kissel_Radiative_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CS_FluorLine_Kissel_no_Cascade(int Z, int line, double E, xrl_error **error);
XRL_EXTERN
double CSb_FluorLine_Kissel_no_Cascade(int Z, int line, double E, xrl_error **error);