pascal/xraylib.pas

    M1_M5O4_AUGER = 838;    
    M1_M5O5_AUGER = 839;    
    M1_M5O6_AUGER = 840;    
    M1_M5O7_AUGER = 841;    
    M1_M5P1_AUGER = 842;    
    M1_M5P2_AUGER = 843;    
    M1_M5P3_AUGER = 844;    
    M1_M5P4_AUGER = 845;    
    M1_M5P5_AUGER = 846;    
    M1_M5Q1_AUGER = 847;    
    M1_M5Q2_AUGER = 848;    
    M1_M5Q3_AUGER = 849;    
    M2_M3M3_AUGER = 850;    
    M2_M3M4_AUGER = 851;    
    M2_M3M5_AUGER = 852;    
    M2_M3N1_AUGER = 853;    
    M2_M3N2_AUGER = 854;    
    M2_M3N3_AUGER = 855;    
    M2_M3N4_AUGER = 856;    
    M2_M3N5_AUGER = 857;    
    M2_M3N6_AUGER = 858;    
    M2_M3N7_AUGER = 859;    
    M2_M3O1_AUGER = 860;    
    M2_M3O2_AUGER = 861;    
    M2_M3O3_AUGER = 862;    
    M2_M3O4_AUGER = 863;    
    M2_M3O5_AUGER = 864;    
    M2_M3O6_AUGER = 865;    
    M2_M3O7_AUGER = 866;    
    M2_M3P1_AUGER = 867;    
    M2_M3P2_AUGER = 868;    
    M2_M3P3_AUGER = 869;    
    M2_M3P4_AUGER = 870;    
    M2_M3P5_AUGER = 871;    
    M2_M3Q1_AUGER = 872;    
    M2_M3Q2_AUGER = 873;    
    M2_M3Q3_AUGER = 874;    
    M2_M4M3_AUGER = 875;    
    M2_M4M4_AUGER = 876;    
    M2_M4M5_AUGER = 877;    
    M2_M4N1_AUGER = 878;    
    M2_M4N2_AUGER = 879;    
    M2_M4N3_AUGER = 880;    
    M2_M4N4_AUGER = 881;    
    M2_M4N5_AUGER = 882;    
    M2_M4N6_AUGER = 883;    
    M2_M4N7_AUGER = 884;    
    M2_M4O1_AUGER = 885;    
    M2_M4O2_AUGER = 886;    
    M2_M4O3_AUGER = 887;    
    M2_M4O4_AUGER = 888;    
    M2_M4O5_AUGER = 889;    
    M2_M4O6_AUGER = 890;    
    M2_M4O7_AUGER = 891;    
    M2_M4P1_AUGER = 892;    
    M2_M4P2_AUGER = 893;    
    M2_M4P3_AUGER = 894;    
    M2_M4P4_AUGER = 895;    
    M2_M4P5_AUGER = 896;    
    M2_M4Q1_AUGER = 897;    
    M2_M4Q2_AUGER = 898;    
    M2_M4Q3_AUGER = 899;    
    M2_M5M3_AUGER = 900;    
    M2_M5M4_AUGER = 901;    
    M2_M5M5_AUGER = 902;    
    M2_M5N1_AUGER = 903;    
    M2_M5N2_AUGER = 904;    
    M2_M5N3_AUGER = 905;    
    M2_M5N4_AUGER = 906;    
    M2_M5N5_AUGER = 907;    
    M2_M5N6_AUGER = 908;    
    M2_M5N7_AUGER = 909;    
    M2_M5O1_AUGER = 910;    
    M2_M5O2_AUGER = 911;    
    M2_M5O3_AUGER = 912;    
    M2_M5O4_AUGER = 913;    
    M2_M5O5_AUGER = 914;    
    M2_M5O6_AUGER = 915;    
    M2_M5O7_AUGER = 916;    
    M2_M5P1_AUGER = 917;    
    M2_M5P2_AUGER = 918;    
    M2_M5P3_AUGER = 919;    
    M2_M5P4_AUGER = 920;    
    M2_M5P5_AUGER = 921;    
    M2_M5Q1_AUGER = 922;    
    M2_M5Q2_AUGER = 923;    
    M2_M5Q3_AUGER = 924;    
    M3_M4M4_AUGER = 925;    
    M3_M4M5_AUGER = 926;    
    M3_M4N1_AUGER = 927;    
    M3_M4N2_AUGER = 928;    
    M3_M4N3_AUGER = 929;    
    M3_M4N4_AUGER = 930;    
    M3_M4N5_AUGER = 931;    
    M3_M4N6_AUGER = 932;    
    M3_M4N7_AUGER = 933;    
    M3_M4O1_AUGER = 934;    
    M3_M4O2_AUGER = 935;    
    M3_M4O3_AUGER = 936;    
    M3_M4O4_AUGER = 937;    
    M3_M4O5_AUGER = 938;    
    M3_M4O6_AUGER = 939;    
    M3_M4O7_AUGER = 940;    
    M3_M4P1_AUGER = 941;    
    M3_M4P2_AUGER = 942;    
    M3_M4P3_AUGER = 943;    
    M3_M4P4_AUGER = 944;    
    M3_M4P5_AUGER = 945;    
    M3_M4Q1_AUGER = 946;    
    M3_M4Q2_AUGER = 947;    
    M3_M4Q3_AUGER = 948;    
    M3_M5M4_AUGER = 949;    
    M3_M5M5_AUGER = 950;    
    M3_M5N1_AUGER = 951;    
    M3_M5N2_AUGER = 952;    
    M3_M5N3_AUGER = 953;    
    M3_M5N4_AUGER = 954;    
    M3_M5N5_AUGER = 955;    
    M3_M5N6_AUGER = 956;    
    M3_M5N7_AUGER = 957;    
    M3_M5O1_AUGER = 958;    
    M3_M5O2_AUGER = 959;    
    M3_M5O3_AUGER = 960;    
    M3_M5O4_AUGER = 961;    
    M3_M5O5_AUGER = 962;    
    M3_M5O6_AUGER = 963;    
    M3_M5O7_AUGER = 964;    
    M3_M5P1_AUGER = 965;    
    M3_M5P2_AUGER = 966;    
    M3_M5P3_AUGER = 967;    
    M3_M5P4_AUGER = 968;    
    M3_M5P5_AUGER = 969;    
    M3_M5Q1_AUGER = 970;    
    M3_M5Q2_AUGER = 971;    
    M3_M5Q3_AUGER = 972;    
    M4_M5M5_AUGER = 973;    
    M4_M5N1_AUGER = 974;    
    M4_M5N2_AUGER = 975;    
    M4_M5N3_AUGER = 976;    
    M4_M5N4_AUGER = 977;    
    M4_M5N5_AUGER = 978;    
    M4_M5N6_AUGER = 979;    
    M4_M5N7_AUGER = 980;    
    M4_M5O1_AUGER = 981;    
    M4_M5O2_AUGER = 982;    
    M4_M5O3_AUGER = 983;    
    M4_M5O4_AUGER = 984;    
    M4_M5O5_AUGER = 985;    
    M4_M5O6_AUGER = 986;    
    M4_M5O7_AUGER = 987;    
    M4_M5P1_AUGER = 988;    
    M4_M5P2_AUGER = 989;    
    M4_M5P3_AUGER = 990;    
    M4_M5P4_AUGER = 991;    
    M4_M5P5_AUGER = 992;    
    M4_M5Q1_AUGER = 993;    
    M4_M5Q2_AUGER = 994;    
    M4_M5Q3_AUGER = 995;    




  procedure XRayInit;cdecl;external External_library name 'XRayInit';

  { Error Handling  }
  procedure SetHardExit(hard_exit:Integer);cdecl;external External_library name 'SetHardExit';

  procedure SetExitStatus(exit_status:Integer);cdecl;external External_library name 'SetExitStatus';

  function GetExitStatus:Integer;cdecl;external External_library name 'GetExitStatus';

  procedure SetErrorMessages(status:Integer);cdecl;external External_library name 'SetErrorMessages';

  function GetErrorMessages:Integer;cdecl;external External_library name 'GetErrorMessages';

  { Atomic weights  }
  function AtomicWeight(Z:Integer):double;cdecl;external External_library name 'AtomicWeight';

  { Density of pure atomic element  }
  function ElementDensity(Z:Integer):double;cdecl;external External_library name 'ElementDensity';

  { Cross sections (cm2/g)  }
  function CS_Total(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Total';

  function CS_Photo(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Photo';

  function CS_Rayl(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Rayl';

  function CS_Compt(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Compt';

  function CS_KN(E:double):double;cdecl;external External_library name 'CS_KN';

  function CS_Energy(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Energy';

  { barn/atom  }
  function CSb_Total(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Total';

  function CSb_Photo(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Photo';

  function CSb_Rayl(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Rayl';

  function CSb_Compt(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Compt';

  { Unpolarized differential scattering cross sections  }
  function DCS_Thoms(theta:double):double;cdecl;external External_library name 'DCS_Thoms';

  function DCS_KN(E:double; theta:double):double;cdecl;external External_library name 'DCS_KN';

  function DCS_Rayl(Z:Integer; E:double; theta:double):double;cdecl;external External_library name 'DCS_Rayl';

  function DCS_Compt(Z:Integer; E:double; theta:double):double;cdecl;external External_library name 'DCS_Compt';

  function DCSb_Rayl(Z:Integer; E:double; theta:double):double;cdecl;external External_library name 'DCSb_Rayl';

  function DCSb_Compt(Z:Integer; E:double; theta:double):double;cdecl;external External_library name 'DCSb_Compt';

  { Polarized differential scattering cross sections  }
  function DCSP_Thoms(theta:double; phi:double):double;cdecl;external External_library name 'DCSP_Thoms';

  function DCSP_KN(E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSP_KN';

  function DCSP_Rayl(Z:Integer; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSP_Rayl';

  function DCSP_Compt(Z:Integer; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSP_Compt';

  function DCSPb_Rayl(Z:Integer; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSPb_Rayl';

  function DCSPb_Compt(Z:Integer; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSPb_Compt';

  { Scattering factors  }
  function FF_Rayl(Z:Integer; q:double):double;cdecl;external External_library name 'FF_Rayl';

  function SF_Compt(Z:Integer; q:double):double;cdecl;external External_library name 'SF_Compt';

  function MomentTransf(E:double; theta:double):double;cdecl;external External_library name 'MomentTransf';

  { X-ray fluorescent line energy  }
  function LineEnergy(Z:Integer; line:Integer):double;cdecl;external External_library name 'LineEnergy';

  { Fluorescence yield  }
  function FluorYield(Z:Integer; shell:Integer):double;cdecl;external External_library name 'FluorYield';

  { Coster-Kronig transition Probability  }
  function CosKronTransProb(Z:Integer; trans:Integer):double;cdecl;external External_library name 'CosKronTransProb';

  { Absorption-edge energies  }
  function EdgeEnergy(Z:Integer; shell:Integer):double;cdecl;external External_library name 'EdgeEnergy';

  { Jump ratio  }
  function JumpFactor(Z:Integer; shell:Integer):double;cdecl;external External_library name 'JumpFactor';

  { Fluorescent-lines cross sections  }
  function CS_FluorLine(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine';

  function CSb_FluorLine(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine';

  { Fractional radiative rate  }
  function RadRate(Z:Integer; line:Integer):double;cdecl;external External_library name 'RadRate';

  { Photon energy after Compton scattering  }
  function ComptonEnergy(E0:double; theta:double):double;cdecl;external External_library name 'ComptonEnergy';

  { Anomalous Scattering Factors  }
  function Fi(Z:Integer; E:double):double;cdecl;external External_library name 'Fi';

  function Fii(Z:Integer; E:double):double;cdecl;external External_library name 'Fii';

  { Kissel Photoelectric cross sections  }
  function CS_Photo_Total(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Photo_Total';

  function CSb_Photo_Total(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Photo_Total';

  function CS_Photo_Partial(Z:Integer; shell:Integer; E:double):double;cdecl;external External_library name 'CS_Photo_Partial';

  function CSb_Photo_Partial(Z:Integer; shell:Integer; E:double):double;cdecl;external External_library name 'CSb_Photo_Partial';

  { XRF cross sections using Kissel partial photoelectric cross sections  }
  function CS_FluorLine_Kissel(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine_Kissel';

  function CSb_FluorLine_Kissel(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine_Kissel';

  function CS_FluorLine_Kissel_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine_Kissel_Cascade';

  function CSb_FluorLine_Kissel_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine_Kissel_Cascade';

  function CS_FluorLine_Kissel_Nonradiative_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine_Kissel_Nonradiative_Cascade';

  function CSb_FluorLine_Kissel_Nonradiative_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine_Kissel_Nonradiative_Cascade';

  function CS_FluorLine_Kissel_Radiative_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine_Kissel_Radiative_Cascade';

  function CSb_FluorLine_Kissel_Radiative_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine_Kissel_Radiative_Cascade';

  function CS_FluorLine_Kissel_no_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CS_FluorLine_Kissel_no_Cascade';

  function CSb_FluorLine_Kissel_no_Cascade(Z:Integer; line:Integer; E:double):double;cdecl;external External_library name 'CSb_FluorLine_Kissel_no_Cascade';
